--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "set DEBUG=app:* && nodemon index",
-    "start": "NODE_ENV=production node index"
+    "start": "set NODE_ENV=production && node index",
+    "test": "mocha --exit"
   },
   "keywords": [],
   "author": "Kristian López",
@@ -24,8 +25,12 @@
     "eslint-plugin-prettier": "^3.1.1",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
+    "mocha": "^6.2.2",
     "nodemon": "^1.19.4",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "proxyquire": "^2.1.3",
+    "simon": "^0.2.3",
+    "supertest": "^4.0.2"
   },
   "husky": {
     "hooks": {
