--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -29,7 +29,7 @@
     "nodemon": "^1.19.4",
     "prettier": "^1.18.2",
     "proxyquire": "^2.1.3",
-    "simon": "^0.2.3",
+    "sinon": "^7.5.0",
     "supertest": "^4.0.2"
   },
   "husky": {
