--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -8,7 +8,9 @@
     "start": "set NODE_ENV=production && node index",
     "test": "mocha --exit",
     "cover": "nyc npm run test",
-    "report": "nyc report --reporter=html && start firefox.exe ./covarage/index.html"
+    "report": "nyc report --reporter=html",
+    "debug": "set DEBUG=express:*,app:* && npm run start",
+    "inspect": "set DEBUG=express:*,app:* && nodemon --inspect index"
   },
   "keywords": [],
   "author": "Kristian López",
@@ -33,7 +35,8 @@
     "prettier": "^1.18.2",
     "proxyquire": "^2.1.3",
     "sinon": "^7.5.0",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "debug": "latest"
   },
   "husky": {
     "hooks": {
